change the build path in all MAkefiles and add some other files to be ignore in gitignore

--- a/disparity/Makefile
+++ b/disparity/Makefile
@@ -2,17 +2,18 @@ CC = g++
 CFLAGS = -c
 LIB = 
 LFLAGS = 
+BUILDPATH = ../build
 GLFLAGS = -lGL -lglut -lGLU -lm
-OPENCVCONF = `pkg-config --cflags --libs opencv`
-#OPENCVFLAGS = `pkg-config --cflags opencv`
+OPENCVINC = `pkg-config --cflags opencv`
+OPENCVLIB = `pkg-config --libs opencv`
 
 all: disparity
 
 disparity: disparity.o
-	$(CC) -std=c++0x disparity.o -o disparity $(OPENCVCONF)$(GLFLAGS)
+	$(CC) -std=c++0x disparity.o -o $(BUILDPATH)/disparity $(OPENCVLIB) $(GLFLAGS)
 
 disparity.o: disparity.cpp
-	$(CC) -std=c++0x $(CFLAGS) $(GLFLAGS) $(OPENCVCONF) disparity.cpp
+	$(CC) -std=c++0x $(CFLAGS) $(GLFLAGS) $(OPENCVINC) disparity.cpp
 
 clean:
 	rm -rf *.o *~
