--- a/capture_stream/Makefile
+++ b/capture_stream/Makefile
@@ -2,12 +2,13 @@ CC = g++
 CFLAGS = -c
 LIB = 
 LFLAGS = 
+BUILDPATH = ../build
 OPENCVCONF = `pkg-config --cflags --libs opencv`
 #OPENCVFLAGS = `pkg-config --cflags opencv`
 
 all: capture
 capture: stcapture.o
-	$(CC) stcapture.o -o capture $(OPENCVCONF)
+	$(CC) stcapture.o -o $(BUILDPATH)/capture $(OPENCVCONF)
 stcapture.o: stcapture.cpp
 	$(CC) $(CFLAGS) $(OPENCVCONF) stcapture.cpp
 
