--- a/capture_stream/Makefile
+++ b/capture_stream/Makefile
@@ -3,14 +3,14 @@ CFLAGS = -c
 LIB = 
 LFLAGS = 
 BUILDPATH = ../build
-OPENCVCONF = `pkg-config --cflags --libs opencv`
-#OPENCVFLAGS = `pkg-config --cflags opencv`
+OPENCVINC = `pkg-config --cflags opencv`
+OPENCVLIB = `pkg-config --libs opencv`
 
 all: capture
 capture: stcapture.o
-	$(CC) stcapture.o -o $(BUILDPATH)/capture $(OPENCVCONF)
+	$(CC) stcapture.o -o $(BUILDPATH)/capture $(OPENCVLIB)
 stcapture.o: stcapture.cpp
-	$(CC) $(CFLAGS) $(OPENCVCONF) stcapture.cpp
+	$(CC) $(CFLAGS) $(OPENCVINC) stcapture.cpp
 
 clean:
 	rm -rf *.o *~
